# gpustat

./: .gitignore  CMakeLists.txt  README.md  backbone_info.md  capacity_comparison.py  cities.csv  compare_costs.py  compute_optimizer.py  fetch_prices.py  hidden_costs_report.md  main.cpp  n_server_comparison.py  optimal_cpu_90.py  optimal_cpu_scaling.py  optimal_full_db.py  optimal_mixed_risk.py  optimal_multi_vendor.py  optimal_n_scaling.py  print_n21_config.py  risk_optimization.py  scaling_analysis.py  solve_config.py
.github/workflows/: benchmark.yml  load_test.yml
benchmark/: benchmark.cpp  load_test.sh
